--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,5 @@
 applications:
-- name: node-hello-world-nikita
+- name: node-hello-world
+  host: nikita-hostname
   memory: 128M
   buildpack: sdk-for-nodejs
